modules/lib/common/src/main/scala/com/example/lib/common/domain/error/ErrorReason.scala
package com.example.lib.common.domain.error

/** Marker trait for per-category error reason enums. */
trait ErrorReason
